--- a/GameOfNature/res/values/strings.xml
+++ b/GameOfNature/res/values/strings.xml
@@ -3,5 +3,6 @@
 
     <string name="app_name">GameOfNature</string>
     <string name="action_settings">Settings</string>
-
+	<string name="start_button">Start</string>
+	
 </resources>
