--- a/GameOfNature/res/values/strings.xml
+++ b/GameOfNature/res/values/strings.xml
@@ -3,6 +3,8 @@
 
     <string name="app_name">GameOfNature</string>
     <string name="action_settings">Settings</string>
-	<string name="start_button">Start</string>
-	
+    <string name="start_button">Start</string>
+    <string name="title_activity_game_board">GameBoardActivity</string>
+    <string name="hello_world">Hello world!</string>
+
 </resources>
