--- a/GameOfNature/res/values/strings.xml
+++ b/GameOfNature/res/values/strings.xml
@@ -1,8 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    
+    
+    <!-- AppNamn -->
     <string name="app_name">GameOfNature</string>
+    
+	<!-- Rubriker -->    
+     <string name="question_topic">Textfråga</string>
+    <string name="hello_world">Hello world!</string>
+    
+    <!-- Knappar -->
+    <string name="start_button">Start</string>
     <string name="action_settings">Settings</string>
-	<string name="start_button">Start</string>
-	
+    <string name="title_activity_question">QuestionActivity</string>
+
 </resources>
