--- a/GameOfNature/res/values/strings.xml
+++ b/GameOfNature/res/values/strings.xml
@@ -3,16 +3,27 @@
 
     
     
-    <!-- AppNamn -->
+    <!-- Startskärm -->
     <string name="app_name">GameOfNature</string>
+    <string name="start_button">Start</string>
     
-	<!-- Rubriker -->    
-     <string name="question_topic">Textfråga</string>
+	<!-- Alternativskärm -->    
+    <string name="question_topic">Textfråga</string>
+    <string name="action_settings">Settings</string>
+     
+    <!-- Spelplan -->
+    
+    
+    <!-- Frågeskärm -->
+    <string name="title_activity_question">QuestionActivity</string>
+    <string name="question">Hur många ben har en myra?</string>
+    <string name="answer_1">2</string>
+    <string name="answer_2">4</string>
+    <string name="answer_3">6</string>
+    <string name="answer_4">8</string>
+    
+	<!-- Övriga -->
     <string name="hello_world">Hello world!</string>
     
-    <!-- Knappar -->
-    <string name="start_button">Start</string>
-    <string name="action_settings">Settings</string>
-    <string name="title_activity_question">QuestionActivity</string>
-
+    
 </resources>
