--- a/GameOfNature/res/values/strings.xml
+++ b/GameOfNature/res/values/strings.xml
@@ -27,6 +27,7 @@
     <!-- Övriga -->
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_task_dialog">TaskDialog</string>
     
     
 
