Gjorde popUp till fakta för olika markörer. Gjorde det med switch case. Känns lite ineffektivt men kan tyvärr inte komma på något bättre sätt.

--- a/GameOfNature/res/values/strings.xml
+++ b/GameOfNature/res/values/strings.xml
@@ -13,12 +13,14 @@
     <string name="colorbackgroundproperties">colorbackgroundproperties</string>
     <string name="bekräfta">Bekräfta</string>
     <string-array name="character_list">
+        <item>Välj markör</item>
         <item>android</item>
         <item>Nyckelpigga</item>
     </string-array>
     <integer-array name="character_img_list">
-         <item>@drawable/ic_launcher</item>
-        <item>@drawable/bug</item>
+        <item>@drawable/box</item>
+        <item>@drawable/androidinbox</item>
+        <item>@drawable/buginbox</item>
     </integer-array>
 
     <!-- Spelplan -->
