Ändrade så att det skickades rätt ikon till databas. Lade till villkor att namn och markör måste väljas innan man kan komma till spelplanen. ändrade så att skärmarna endast kan vara i portrait mode. Justerade grejerna i alternativsidan

--- a/GameOfNature/res/values/strings.xml
+++ b/GameOfNature/res/values/strings.xml
@@ -18,9 +18,9 @@
         <item>Nyckelpigga</item>
     </string-array>
     <integer-array name="character_img_list">
-        <item>@drawable/box</item>
-        <item>@drawable/androidinbox</item>
-        <item>@drawable/buginbox</item>
+        <item>@android:color/transparent</item>
+        <item>@drawable/ic_launcher</item>
+        <item>@drawable/bug</item>
     </integer-array>
 
     <!-- Spelplan -->
