Fixade nu så att ljusstyrkan på ikonerna i actionbar bytes när man klara en uppgift. Koden är jätte full och kass. Så byt ut den om ni kan komma på något bättre sätt. För det är det enda sättet som funkade utan att krascha. Satte även spelplanen till fullscreen. Tips: sätt inte din fake gps till punkten i malmö för det krascha som bara den då xD

--- a/GameOfNature/res/values/strings.xml
+++ b/GameOfNature/res/values/strings.xml
@@ -16,7 +16,7 @@
     <string-array name="character_list">
         <item>Välj markör</item>
         <item>android</item>
-        <item>Nyckelpigga</item>
+        <item>Nyckelpiga</item>
     </string-array>
     <integer-array name="character_img_list">
         <item>@android:color/transparent</item>
