--- a/GameOfNature/res/values/strings.xml
+++ b/GameOfNature/res/values/strings.xml
@@ -1,23 +1,25 @@
-<?xml version="1.0" encoding="ISO-8859-1" ?>
+<?xml version="1.0" encoding="ISO-8859-1"?>
 <resources>
+
     <!-- StartskÃ¤rm -->
     <string name="app_name">Game of Nature</string>
     <string name="start_button">Starta Nytt Spel</string>
     <string name="continue_button">Fortsätt Spel</string>
 
-    
     <!-- Alternativskärm -->
-    <string name="title_activity_alternativsida">AlternativSidaActivity</string>   
+    <string name="title_activity_alternativsida">AlternativSidaActivity</string>
     <string name="lagnamn">Lagnamn</string>
     <string name="lagfärg">Lagfärg</string>
     <string name="spelkaraktär">Spelkaraktär</string>
     <string name="colorbackgroundproperties">colorbackgroundproperties</string>
     <string name="bekräfta">Bekräfta</string>
+
     <string-array name="character_list">
         <item>Välj markör</item>
         <item>android</item>
         <item>Nyckelpiga</item>
     </string-array>
+
     <integer-array name="character_img_list">
         <item>@android:color/transparent</item>
         <item>@drawable/ic_launcher</item>
@@ -26,12 +28,12 @@
 
     <!-- Spelplan -->
     <string name="title_activity_game_board">GameBoardActivity</string>
-    
+
     <!-- Statistikskärm -->
     <string name="title_activity_statistics">StatisticsActivity</string>
     <string name="team_name">Lag:</string>
     <string name="game_time">Tid:</string>
-    
+
     <!-- Frågeskärm -->
     <string name="title_activity_question">QuestionActivity</string>
     <string name="question_topic">Textfråga</string>
@@ -40,14 +42,13 @@
     <string name="answer_2">4</string>
     <string name="answer_3">6</string>
     <string name="answer_4">8</string>
-    
+
     <!-- Övriga -->
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_task_dialog">TaskDialog</string>
     <string name="winner_title">Grattis! Du har vunnit spelet!</string>
     <string name="distance">Avstånd: </string>
-    
-    
+    <string name="title_activity_info_dialog">InfoDialog</string>
 
 </resources>
