--- a/GameOfNature/res/values/strings.xml
+++ b/GameOfNature/res/values/strings.xml
@@ -31,8 +31,8 @@
 
     <!-- Statistikskärm -->
     <string name="title_activity_statistics">StatisticsActivity</string>
-    <string name="team_name">Lag:</string>
-    <string name="game_time">Tid:</string>
+    <string name="team_name">Lagnamn:</string>
+    <string name="game_time">Speltid:</string>
 
     <!-- Frågeskärm -->
     <string name="title_activity_question">QuestionActivity</string>
@@ -54,7 +54,7 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_task_dialog">TaskDialog</string>
     <string name="winner_title">Grattis! Du har vunnit spelet!</string>
-    <string name="distance">Avstånd: </string>
+    <string name="distance">Färdad sträcka: </string>
     <string name="title_activity_info_dialog">InfoDialog</string>
 
 </resources>
